# gridflag

./: README.md  profile_run.py  pyproject.toml
.github/workflows/: ci.yml
src/gridflag/: __init__.py  __main__.py  cli.py  config.py  coordinates.py  flagger.py  gpu.py  gridder.py  histogram.py  msio.py  pipeline.py  plotting.py  thresholds.py  utils.py  zarr_store.py
tests/: conftest.py  test_config.py  test_coordinates.py  test_flagger.py  test_gridder.py  test_histogram.py  test_pipeline_units.py  test_plotting.py  test_thresholds.py  test_utils.py  test_zarr_store.py
